infra/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: resume-as-a-service-service
spec:
  selector:
    app: resume-as-a-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
