infra/k8s/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: resume-as-a-service-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - your-domain.tld
    secretName: resume-as-a-service-tls
  rules:
    - host: your-domain.tld
      http:
        paths:
        - backend:
            serviceName: resume-as-a-service-deployment
            servicePort: 3000
